--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,10 +1,14 @@
 <html>
-    <head>
-        <title>To-Do lists</title>
+	<head>
+        <title>To-Do List</title>
     </head>
-    <body>
-        <h1>Your To-Do list</h1>
-        <input id="id_new_item" placeholder="Enter a to-do item" />
-        <table id="id_list_table">
-    </body>
+	<h1>Your To-Do List</h1>
+	<form method="POST">
+	    <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+	    {% csrf_token %}
+	</form>
+
+	<table id="id_list_table">
+		<tr><td>{{ new_item_text }}</td></tr>
+	</table>
 </html>
