--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -9,6 +9,6 @@
 	</form>
 
 	<table id="id_list_table">
-		<tr><td>{{ new_item_text }}</td></tr>
+		<tr><td>1: {{ new_item_text }}</td></tr>
 	</table>
 </html>
