--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,4 +1,19 @@
-<html>
+{% extends 'base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
+
+
+
+
+
+
+
+
+
+
+<!-- <html>
   <head>
     <title>To-Do lists</title>
   </head>
@@ -6,8 +21,10 @@
   <body>
     <h1>Start a new To-Do list</h1>
     <form method="POST" action="/lists/new">
-      <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-      {% csrf_token %}
-    </form>
+		  <p style="text-align: center;">
+		    <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+		  </p>
+		  { csrf_token %}
+		</form>
   </body>
-</html>
+</html> -->
