--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,4 +1,31 @@
-<html>
+{% extends 'base.html' %}
+
+{% block header_text %}Your To-Do list{% endblock %}
+
+{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %}
+
+{% block table %}
+  <table id="id_list_table">
+    {% for item in list.item_set.all %}
+      <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+    {% endfor %}
+  </table>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <html>
   <head>
     <title>To-Do lists</title>
   </head>
@@ -6,13 +33,13 @@
     <h1>Your To-Do list</h1>
     <form method="POST" action="/lists/{{ list.id }}/add_item">
       <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-      {% csrf_token %}
+      { csrf_token %}
     </form>
 
     <table id="id_list_table">
-      {% for item in list.item_set.all %}
+      { for item in list.item_set.all %}
         <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-      {% endfor %}
+      { endfor %}
     </table>
   </body>
-</html>
+</html> -->
