--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>To-Do lists</title>
     <link href="/static/bootstrap-5.2.0-beta1-dist/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/base.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>To-Do lists</title>
+
   </head>
 
   <body>
@@ -18,20 +20,17 @@
           <div class="text-center">
             <h1>{% block header_text %}{% endblock %}</h1>
             <form method="POST" action="{% block form_action %}{% endblock %}">
-              <input name="item_text" id="id_new_item"
-                     class="form-control input-lg"
-                     placeholder="Enter a to-do item" />
+              {{ form.text }}
               {% csrf_token %}
-              {% if error %}
+              {% if form.errors %}
                 <div class="form-group has-error">
-                  <span class="help-block">{{ error }}</span>
+                  <div class="help-block">{{ form.text.errors }}</div>
                 </div>
               {% endif %}
             </form>
           </div>
         </div>
       </div>
-
       <div class="row">
         <div class="col-md-12 col-md-offset-3">
           {% block table %}
