--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -15,6 +15,18 @@
   <body>
     <div class="container">
 
+      <div class="navbar">
+        {% if user.is_authenticated %}
+          <p>Logged in as {{ user.email }}</p>
+          <p><a id="id_logout" href="{% url 'logout' %}">Log out</a></p>
+        {% else %}
+          <form method="POST" action ="{% url 'send_login_email' %}">
+            Enter email to log in: <input name="email" type="text" />
+            {% csrf_token %}
+          </form>
+        {% endif %}
+      </div>
+
       <div class="row">
         <div class="col-md-12 col-md-offset-3 jumbotron">
           <div class="text-center">
@@ -31,6 +43,7 @@
           </div>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-12 col-md-offset-3">
           {% block table %}
@@ -43,9 +56,9 @@
     <script src="/static/list.js"></script>
 
     <script>
-      $(document).ready(function () {
-        window.Superlists.initialize();
-      });
+$(document).ready(function () {
+  window.Superlists.initialize();
+});
     </script>
   </body>
 
