--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>To-Do lists</title>
     <link href="/static/bootstrap-5.2.0-beta1-dist/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/base.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>To-Do lists</title>
+    
 
   </head>
 
@@ -18,11 +19,22 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
-          <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
-            <span>Enter email to log in:</span>
-            <input class="form-control" name="email" type="text" />
-            {% csrf_token %}
-          </form>
+          <!-- { if user.email %} -->
+          {% if user.is_authenticated %}
+
+            <ul class="nav navbar-nav navbar-right">
+              <li class="navbar-text">Logged in as {{ user.email }}</li>
+              <li><a href="{% url 'logout' %}">Log out</a></li>
+            </ul>
+          {% else %}
+            <form class="navbar-form navbar-right"
+                  method="POST"
+                  action="{% url 'send_login_email' %}">
+              <span>Enter email to log in:</span>
+              <input class="form-control" name="email" type="text" />
+              {% csrf_token %}
+            </form>
+          {% endif %}
         </div>
       </nav>
 
