added my list testing

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -19,9 +19,7 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
-          <!-- { if user.email %} -->
-          {% if user.is_authenticated %}
-
+          {% if user.email %}
             <ul class="nav navbar-nav navbar-right">
               <li class="navbar-text">Logged in as {{ user.email }}</li>
               <li><a href="{% url 'logout' %}">Log out</a></li>
